--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -1,11 +1,31 @@
 @import '~scss/index.scss';
 
 .#{$prefix}header {
-  padding: 8px;
   height: 60px;
   background: $header-background;
   border-radius: 5px 5px 0 0;
   box-sizing: border-box;
+
+  .left {
+    padding: 16px 8px 10px 8px;    
+    flex: 1;
+  }
+  .right {
+    width: 80px;
+  }
+  .right::before {
+    display: inline-block;
+    content: '';
+    width: 1px;
+    height: 60px;
+    background: rgba(75, 75, 75, 0.8);
+    transform: scaleX(0.4);
+  }
+
+  .icon {
+    width: 24px;
+    height: 20px;
+  }
 
   .logo {
     padding-left: 46px;
@@ -14,24 +34,19 @@
     background-image: url('~images/logo.png');
     background-size: 30px 30px;
     background-repeat: no-repeat;
-    background-position: 7px 7px;
+    background-position: 7px 2px;
 
     span {
       font-size: 22px;
       color: #fff;
       font-weight: 700;
-      line-height: 44px;
+      line-height: 34px;
     }
   }
 
   .nav {
-    padding: 11px 0;
     flex: 4;
-
-    .icon {
-      width: 24px;
-      height: 20px;
-    }
+    align-items: center;
 
     .step {
       border: 1px solid #666;
@@ -73,11 +88,35 @@
 
   .setting {
     flex: 1;
+    align-items: center;
+    flex-direction: row-reverse;
 
     .mail {
-      background-image: url('~images/mail.png');
-      background-size: 100% 100%;
+      margin-right: 20px;
+      background-image: url('~images/email.png');
+      background-size: 20px 20px;
+    }
+    .set {
+      background-image: url('~images/setting.png');
+      background-size: 20px 20px;
     }
   }
+
+  .my-info {
+    align-items: center;
+    
+    .avatar {
+      margin-left: 10px;
+      margin-top: 6px;
+      display: inline-block;
+      width: 24px;
+      height: 24px;
+      border-radius: 12px;
+      background-image: url("~images/my.png");
+      background-size: 24px 24px;
+      background-repeat: no-repeat;
+    }
+  }
+
 }
 
