feat: menu version1

--- a/src/scss/variable.scss
+++ b/src/scss/variable.scss
@@ -4,3 +4,14 @@ $height: 672px;
 $header-background: #C20C0C;
 $header-border: #a40011;
 $header-text: #fff;
+
+$main-border-color: #d3d3d3;
+
+
+$menu-background: #f4f4f4;
+$main-content-background: #f9f9f9;
+
+
+
+$player-background: #f4f4f4;
+$player-border-color: #d3d3d3;
