--- a/src/scss/variable.scss
+++ b/src/scss/variable.scss
@@ -1,16 +1,17 @@
 $prefix: 'six-';
 $width: 1000px;
 $height: 672px;
+
 $header-background: #C20C0C;
 $header-border: #a40011;
 $header-text: #fff;
 
+$main-content-background: #f9f9f9;
 $main-border-color: #d3d3d3;
 
 
 $menu-background: #f4f4f4;
-$main-content-background: #f9f9f9;
-
+$menu-border-color: #d3d3d3;
 
 
 $player-background: #f4f4f4;
