--- a/src/scss/variable.scss
+++ b/src/scss/variable.scss
@@ -2,6 +2,8 @@ $prefix: 'six-';
 $width: 1000px;
 $height: 672px;
 
+$font-size: 14px;
+
 $header-background: #C20C0C;
 $header-border: #a40011;
 $header-text: #fff;
@@ -16,3 +18,9 @@ $menu-border-color: #d3d3d3;
 
 $player-background: #f4f4f4;
 $player-border-color: #d3d3d3;
+
+
+/* pages */
+$index-types-active-color: #a40011;
+$index-types-border-color: #d3d3d3;
+
